# storm-engine

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/: StormSetup.cmake
src/: CMakeLists.txt
src/apps/engine/src/: main.cpp
src/libs/core/: CMakeLists.txt
src/libs/core/include/: core.h
src/libs/core/src/: core_impl.cpp
src/libs/rust_wrapper/: CMakeLists.txt
src/libs/rust_wrapper/include/: rust.hpp
src/libs/rust_wrapper/src/: rust_wrapper.cpp  rust_wrapper.h
src/rust_ffi/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
src/rust_ffi/src/: ffi_util.rs  lib.rs  logs.rs
src/rust_ffi/src/animals/: mod.rs
src/rust_ffi/src/ball_splash/: mod.rs
src/rust_ffi/src/blade/: mod.rs
src/rust_ffi/src/core/: config_format.rs  engine_setting.rs  engine_version.rs  layers.rs  mod.rs  vma.rs
src/rust_ffi/src/diagnostics/: logs.rs  mod.rs
src/rust_ffi/src/dialog/: legacy_dialog.rs  link_describe.rs  mod.rs
src/rust_ffi/src/editor/: engine_editor.rs  mod.rs
src/rust_ffi/src/input/: mod.rs  sdl_input.rs
src/rust_ffi/src/island/: map_zipper.rs  mod.rs
src/rust_ffi/src/math/: color.rs  matrix.rs  mod.rs  plane.rs  quaternion.rs  sphere.rs  triangle.rs  vector.rs  vector3.rs  vector4.rs
src/rust_ffi/src/renderer/: bm_font.rs  camera.rs  mod.rs
src/rust_ffi/src/rigging/: mod.rs  sail_config.rs
src/rust_ffi/src/sea/: mod.rs
src/rust_ffi/src/sea_foam/: mod.rs
src/rust_ffi/src/util/: mod.rs
src/rust_ffi/src/window/: mod.rs  os_window.rs  sdl_window.rs
