[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.37"
log = "0.4.21"
simplelog = "0.12.2"
windows = {version = "0.58.0", features = ["Win32_Graphics_Direct3D9"]}
sdl2 = "0.37.0"
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.27.0"